2008-01-17  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Don't fail in dist when no .types file is present. Fixes #509539.

2008-01-16  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	  Give file and line number when complaining about duplicate
	  definitions.

2008-01-14  Stefan Kost  <ensonic@users.sf.net>

	patch by: Joe Marcus Clarke <marcus@freebsd.org>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Do not abort the build, if gtk-doc is not installed. Fixes #508897

2007-12-20  Mathias Hasselmann  <mathias@openismus.com>

	* configure.in:
	Lower Python dependency to 2.3 (#503054). Just warn when Python
	wasn't found. Print a configuration summary before leaving the
	configure script.
	* Makefile.am:
	Do not install gtkdoc-depscan when Python wasn't found.

2007-12-20  Mathias Hasselmann  <mathias@openismus.com>

	* gtkdoc-depscan.in:
	Use old and/or pattern instead of the new ternary operator.
	This drops the Python 2.5 dependency for that script.
	Original patch by Frederic Peters. (#503054)

2007-12-17  Mathias Hasselmann  <mathias@openismus.com>

	* configure.in:
	  Use AM_PATH_PYTHON instread of AC_PATH_PROG to find Python.
	  (#503710)

2007-12-17  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.xsl:
	  Render accronyms from docbook and glossary in html.

2007-12-17  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/tester-docs.sgml:
	* tests/bugs/docs/tester-docs.xml:
	* tests/gobject/docs/tester-docs.sgml:
	* tests/gobject/docs/tester-docs.xml:
	  Add the xml instead of the sgml docs.

2007-12-12  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Revert last change and reopen #503119. Needs a different fix.

2007-12-12  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Use content_files as a dependency the sgml-build.stamp.

2007-12-11  Mathias Hasselmann  <mathias@openismus.com>

	* gtkdoc-depscan.in: