@@ -929,7 +929,7 @@ sub ReadDeclarationsFile {
 			    } elsif ($declaration =~ m/^\s*(struct\s+\w+\s*;)?\s*$/) {
 				# Ignore an empty or forward declaration.
 			    } else {
-				print "WARNING: Structure has multiple definitions: $declaration_name\n";
+				print "WARNING: Structure $declaration_name has multiple definitions: $file:$.\n";
 			    }
 
 			} else {
@@ -938,7 +938,7 @@ sub ReadDeclarationsFile {
 			    $DeclarationConditional{$declaration_name} = 1;
 			}
 		    } else {
-			print "WARNING: $declaration_name has multiple definitions\n";
+			print "ERROR: $declaration_name has multiple definitions: $file:$.\n";
 		    }
 		} else {
 		    $Declarations{$declaration_name} = $declaration;
