@@ -1,3 +1,14 @@
+2008-01-21  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-mkdb.in:
+	* gtkdoc-mktmpl.in:
+	  Give file and line number when complaining about duplicate
+	  definitions. Seems to not have been applied with older commit.
+
+	* gtkdoc-scan.in:
+	* tests/gobject/src/gobject.h:
+	  Handle typedef enums.
+
 2008-01-17  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtk-doc.make:
